--- a/buyp.html
+++ b/buyp.html
@@ -295,7 +295,7 @@ async function submitPayment(type) {
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
         chat_id: user.id,
-        text: "✅✅ Payment received. Admin will confirm within 24 hours."
+        text: "✅✅ Payment received. Admin will confirm within 24 hours. if you need any help fell free to message admin on Whatsapp https://wa.me/2348121697423?text=Hello%20Admin%2C%20I%20paid%20for%20Premium%20and%20I%20would%20like%20to%20confirm%20my%20payment%20status.%20Thank%20you"
       })
     });
 
