--- a/buyp.html
+++ b/buyp.html
@@ -7,7 +7,7 @@
 
   <style>
     body {
-      margin: 0;
+      margin-top: 150px;
       font-family: Arial, sans-serif;
       background: #0f1723;
       color: #fff;
