--- a/inn.html
+++ b/inn.html
@@ -527,13 +527,13 @@ function renderFreeLinks() {
         .catch(() => {
           console.warn("Ad failed after WebApp load ❌");
         });
-    }, 10000); // ⏳ wait 10s after load (you can change the delay)
+    }, 3000); // ⏳ wait 3s after load (you can change the delay)
   });
 </script>
 <!-- ✅ PREMIUM POPUP -->
 <div id="premiumModal" class="premium-modal">
   <div class="premium-box">
-    <h3>🔒 Premium Update</h3>
+    <h3>📢 Notification</h3>
     <p>Our Premium have more hacking tools </p>
     <p>
       We have moved some of our free links to <b>Premium</b> links.  
