--- a/buyp.html
+++ b/buyp.html
@@ -126,8 +126,7 @@
   <div class="plan-btn" onclick="choosePlan('Five Days Trial — ₦6,000 / $6')">5️⃣ Five Days — ₦6,000 ($6)</div>
   <div class="plan-btn" onclick="choosePlan('Two Weeks Trial — ₦10,000 / $10')">🥈 Two Weeks — ₦10,000 ($10)</div>
   <div class="plan-btn" onclick="choosePlan('One Month — ₦25,000 / $25')">🥇 One Month — ₦25,000 ($25)</div>
-  <div class="plan-btn" onclick="choosePlan('One Year — ₦50,000 / $50')">🟠 One Year — ₦50,000 ($50)</div>
-  <div class="plan-btn" onclick="choosePlan('Forever — ₦100,000 / $100')">🏆 Forever — ₦100,000 ($100)</div>
+  <div class="plan-btn" onclick="choosePlan('Forever — ₦50,000 / $50')">🏆 Forever — ₦50,000 ($50)</div>
 </div>
 
 <!-- ✅ METHOD -->
@@ -176,12 +175,29 @@
       ✅ Pay with Trust Wallet
     </a>
 
-    <!-- ✅ HIDDEN RAW ADDRESS (NOT VISIBLE) -->
-    <div class="account-bold hidden-address">
-      0xbBcc409872bC2441400735624638F3D67DAa7C4C
-    </div>
-  </div>
+<!-- ✅ HIDDEN RAW ADDRESS (NOT VISIBLE) -->
+<div id="walletAddress" class="account-bold hidden-address">0xbBcc409872bC2441400735624638F3D67DAa7C4C</div>
 
+<!-- ✅ COPY BUTTON -->
+<button onclick="copyWallet()" style="
+  margin-top:10px;
+  background:#22c55e;
+  color:#000;
+  font-weight:bold;
+">
+  📋 Copy Wallet Address
+</button>
+<script>
+  function copyWallet() {
+  const wallet = document.getElementById("walletAddress").innerText;
+
+  navigator.clipboard.writeText(wallet).then(() => {
+    alert("✅ Wallet address copied successfully!");
+  }).catch(() => {
+    alert("❌ Failed to copy address");
+  });
+}
+</script>
   <input type="file" id="usdProof" accept="image/*" onchange="previewImage(this,'usdPreview')">
   <div class="preview"><img id="usdPreview"></div>
 
