--- a/buyp.html
+++ b/buyp.html
@@ -118,6 +118,7 @@
 <!-- ✅ PLAN PAGE -->
 <div class="box" id="planPage">
   <h2>💎 Premium Plan List</h2>
+
   <div class="plan-btn" onclick="choosePlan('Five Days Trial — ₦6,000 / $6')">5️⃣ Five Days — ₦6,000 ($6)</div>
   <div class="plan-btn" onclick="choosePlan('Two Weeks Trial — ₦10,000 / $10')">🥈 Two Weeks — ₦10,000 ($10)</div>
   <div class="plan-btn" onclick="choosePlan('One Month — ₦25,000 / $25')">🥇 One Month — ₦25,000 ($25)</div>
@@ -143,7 +144,8 @@
   </div>
   <input type="file" id="ngnProof" accept="image/*" onchange="previewImage(this,'ngnPreview')">
   <div class="preview"><img id="ngnPreview"></div>
-  <input type="text" id="ngnWhatsapp" placeholder="WhatsApp Number">
+
+  <input type="tel" id="ngnWhatsapp" placeholder="WhatsApp Number or phone number">
   <button class="submit" onclick="submitPayment('NGN')">Submit</button>
   <button class="back" onclick="goBack('method')">⬅ Back</button>
 </div>
@@ -225,8 +227,9 @@ function previewImage(input, previewId){
   reader.readAsDataURL(file);
 }
 
-/* ✅✅✅ FIXED SUCCESS & FAILURE LOGIC ONLY ✅✅✅ */
+/* ✅ FIXED: NOW SENDS USERNAME, ID, NAME + NOTIFIES BUYER */
 async function submitPayment(type) {
+
   let whatsapp = type === "NGN"
     ? document.getElementById("ngnWhatsapp").value
     : document.getElementById("usdWhatsapp").value;
@@ -238,16 +241,23 @@ async function submitPayment(type) {
   if (!whatsapp) { alert("Enter WhatsApp number"); return; }
   if (!proof) { alert("Upload payment screenshot"); return; }
 
-  // ✅ SHOW SUCCESS PAGE IMMEDIATELY
+  // Show success page immediately
   showPage("successPage");
 
   let user = tg.initDataUnsafe?.user || {};
 
   let caption = `
-✅ NEW PREMIUM PAYMENT
+🚨 NEW PREMIUM PAYMENT
+
+👤 Username: @${user.username || "Not Available"}
+🆔 Telegram ID: ${user.id || "Not Available"}
+📛 Full Name: ${user.first_name || "Not Available"}
+
 🎁 Plan: ${selectedPlan}
 💳 Method: ${type}
 📱 WhatsApp: ${whatsapp}
+
+⏳ Awaiting approval.
 `;
 
   let formData = new FormData();
@@ -256,12 +266,26 @@ async function submitPayment(type) {
   formData.append("caption", caption);
 
   try {
+    // SEND TO ADMIN
     await fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendPhoto`, {
       method: "POST",
       body: formData
     });
+
+    // SEND MESSAGE TO BUYER
+    if (user.id) {
+      await fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          chat_id: user.id,
+          text: "✅ Payment received!\n\nYour payment has been submitted successfully.\nAdmin will confirm within 24 hours.\n\nIf you need help, send the admin a WhatsApp message:\nhttps://wa.me/2348121697423"
+        })
+      });
+    }
+
   } catch (err) {
-    alert("⚠️ Payment saved but could not notify admin. Please contact admin on WhatsApp.");
+    alert("⚠️ Payment submitted but admin notification failed. Contact admin.");
   }
 }
 </script>
