--- a/buyp.html
+++ b/buyp.html
@@ -178,7 +178,7 @@
 <div class="box hidden" id="successPage">
   <div class="success">
     ✅ Payment Submitted Successfully!<br><br>
-    Your payment has been received. Admin will review it within 24 hours, Please check notification from intelligent premium bot for confirmation or declined of payment 🗨️
+    Your payment has been received. Admin will review it within 24 hours, Please check notification from intelligent premium bot for confirmation or declined of payment.🗨️
     <p>
       If you submit a fake payment proof, your payment will be declined.
       <a href="https://wa.me/2348121697423" target="_blank" style="color:#fff;">Admin on WhatsApp</a>
