--- a/buyp.html
+++ b/buyp.html
@@ -165,7 +165,7 @@
 
   <div id="walletAddress" class="account-bold hidden-address">0xbBcc409872bC2441400735624638F3D67DAa7C4C</div>
 
-  <button onclick="copyWallet()" style="margin-top:10px;background:#22c55e;color:#000;font-weight:bold;">📋 Copy Wallet Address</button>
+  <button onclick="copyWallet()" style="margin-top:10px;background:#22c55e;color:#000;font-weight:bold;">📋 Copy Wallet Address Smart chain (BNB) Bep 20 Address</button>
 
   <input type="file" id="usdProof" accept="image/*" onchange="previewImage(this,'usdPreview')">
   <div class="preview"><img id="usdPreview"></div>
