--- a/inn.html
+++ b/inn.html
@@ -182,7 +182,7 @@
         show_9830644(); // show Monetag ad
         setTimeout(function() {
           window.open(url, "_blank", "noopener"); // always open in new tab
-        }, 5000); // wait 3s before redirect (adjust if needed)
+        }, 10000); // wait 10s before redirect (adjust if needed)
       } else {
         window.open(url, "_blank", "noopener");
       }
@@ -436,7 +436,7 @@ function renderFreeLinks() {
     
         <div style="margin-top:14px;padding:10px;border:1px dashed rgba(245,198,115,.5);background:rgba(255,213,133,.08);border-radius:10px;font-size:13px;display:flex;gap:10px;align-items:center;">
           Access locked. Upgrade to unlock this link.
-          <a href="https://t.me/inamyophisintlinkbot" target="_blank" rel="noopener noreferrer"
+          <a href="http://t.me/inamyophisintlinkbot/premium" target="_blank" rel="noopener noreferrer"
              style="margin-left:auto;background:linear-gradient(135deg,#f5c673,#d89b2b);color:#1a1205;padding:8px 12px;border-radius:8px;font-weight:700;text-decoration:none;">
             Go Premium
           </a>
