--- a/buyp.html
+++ b/buyp.html
@@ -148,7 +148,7 @@ input::placeholder {
 <div class="box hidden" id="methodPage">
   <h2>Select Payment Method</h2>
   <button class="ngn" onclick="showNGN()">Pay with NGN Nigeria bank transfer 🏦</button>
-  <button class="usd" onclick="showUSD()">Pay with USD</button>
+  <button class="usd" onclick="showUSD()">Pay with USD 💲 Crypto wallet</button>
 <button onclick="openWhatsApp()" 
 style="background:#25D366;color:#000;font-weight:bold;margin-top:10px;">
   💬 Live Chat With Admin on WhatsApp
