--- a/inn.html
+++ b/inn.html
@@ -538,7 +538,7 @@ function renderFreeLinks() {
     <p>Our Premium have more hacking tools </p>
     <p>
       We have moved some of our free links to <b>Premium</b> links.  
-      Upgrade now to unlock all premium tools.
+      If you find the link you are looking for in the free links, but you did not see it go to premium you will see all links there! 💎
     </p>
         <button class="premium-later-btn" onclick="closePremiumModal()">⏳ Ok i understand(I will buy premium later)</button>
     <button class="premium-ok-btn" onclick="goToPremium()">✅  Premium links (I'm already a premium users)</button>
