--- a/inn.html
+++ b/inn.html
@@ -144,7 +144,7 @@
   padding:10px;
   border:none;
   border-radius:10px;
-  background:#e2f0e3;
+  background:white;
   color:black;
   font-weight:700;
   cursor:pointer;
@@ -535,12 +535,14 @@ function renderFreeLinks() {
 <div id="premiumModal" class="premium-modal">
   <div class="premium-box">
     <h3>📢 Notification</h3>
-    <p>Our Premium have more hacking tools </p>
+    <p>Copy your link and send them to your client, make sure you send /start to the main bot of the webapp,<a href="https://t.me/intelligentverificationlinkbot" target="_blank" rel="noopener noreferrer">
+  Intelligent verification link bot
+</a></p>
     <p>
       We have moved some of our free links to <b>Premium</b> links.  
       If you find the link you are looking for in the free links, but you did not see it go to premium you will see all links there! 💎
     </p>
-        <button class="premium-later-btn" onclick="closePremiumModal()">⏳ Ok i understand(I will buy premium later)</button>
+        <button class="premium-later-btn" onclick="closePremiumModal()">Copy free link (i will buy premium later) </button>
     <button class="premium-ok-btn" onclick="goToPremium()">✅  Premium links (I'm already a premium users)</button>
   </div>
 </div>
