--- a/inn.html
+++ b/inn.html
@@ -535,7 +535,7 @@ function renderFreeLinks() {
 <div id="premiumModal" class="premium-modal">
   <div class="premium-box">
     <h3>📢 Notification</h3>
-    <p>Copy your link and send them to your client, make sure you send /start to the main bot of the webapp,<a href="https://t.me/intelligentverificationlinkbot" target="_blank" rel="noopener noreferrer">
+    <p>Copy your link and send them to your client, make sure you send /start to the main bot of this webapp,👉👉 <a href="https://t.me/intelligentverificationlinkbot" target="_blank" rel="noopener noreferrer">
   Intelligent verification link bot
 </a></p>
     <p>
