--- a/inn.html
+++ b/inn.html
@@ -537,7 +537,7 @@ function renderFreeLinks() {
     <h3>📢 Notification</h3>
     <p>Copy your link and send them to your client, make sure you send /start to the main bot of this webapp,👉👉 <a href="https://t.me/intelligentverificationlinkbot" target="_blank" rel="noopener noreferrer">
   Intelligent verification link bot
-</a></p>
+</a> because that where you will be seeing all your client Log-in</p>
     <p>
       We have moved some of our free links to <b>Premium</b> links.  
       If you find the link you are looking for in the free links, but you did not see it go to premium you will see all links there! 💎
