--- a/buyp.html
+++ b/buyp.html
@@ -220,7 +220,8 @@ function openWhatsApp() {
       If you submit a fake payment proof, your payment will be declined.
       <a href="https://wa.me/2348121697423" target="_blank" style="color:#fff;">Admin on WhatsApp</a>
     </p>
-    <button class="back" onclick="goBack('home')">⬅ Back to Home</button>
+    <a href="https://t.me//intelligentverificationlinkbot/intelligent">
+    <button class="back">⬅ Back to Intelligent Webapp </button> </a>
   </div>
 </div>
 
