--- a/inn.html
+++ b/inn.html
@@ -542,6 +542,7 @@ function renderFreeLinks() {
       We have moved some of our free links to <b>Premium</b> links.  
       If you find the link you are looking for in the free links, but you did not see it go to premium you will see all links there! 💎
     </p>
+<p> Don't be panic 😉 If you are not a premium you can still copy free link's 🔗 </p>
         <button class="premium-later-btn" onclick="closePremiumModal()">Copy free link (i will buy premium later) </button>
     <button class="premium-ok-btn" onclick="goToPremium()">✅  Premium links (I'm already a premium users)</button>
   </div>
