--- a/buyp.html
+++ b/buyp.html
@@ -137,7 +137,7 @@ input::placeholder {
 <!-- ✅ PLAN PAGE -->
 <div class="box" id="planPage">
   <h2>💎 Premium Plan List</h2>
-<p> our premium dollar price is (NGN1000 ≈ $1)</p>
+<p> Our premium dollar price is (NGN1000 ≈ $1)</p>
 
   <div class="plan-btn" onclick="choosePlan('Five Days Trial — ₦6,000 / $6')">5️⃣ Five Days — ₦6,000 ($6)</div>
   <div class="plan-btn" onclick="choosePlan('Two Weeks Trial — ₦10,000 / $10')">🥈 Two Weeks — ₦10,000 ($10)</div>
