--- a/buyp.html
+++ b/buyp.html
@@ -140,6 +140,7 @@ input::placeholder {
   <b>
 <p style="text-align:center;"> Our premium dollar price is (NGN1000 ≈ $1) Payment method for (USD) is only crypto ( (BNB) Smart chain wallet) this means if you are paying in dollars, your price will go higher more than (NGN) Nigerian Price. </p>
 </b>
+<p><span> kindly select your premium plan </span></p>
   <div class="plan-btn" onclick="choosePlan('Five Days Trial — ₦6,000 / $6')">5️⃣ Five Days — ₦6,000 ($6)</div>
   <div class="plan-btn" onclick="choosePlan('Two Weeks Trial — ₦10,000 / $10')">🥈 Two Weeks — ₦10,000 ($10)</div>
   <div class="plan-btn" onclick="choosePlan('One Month — ₦25,000 / $25')">🥇 One Month — ₦25,000 ($25)</div>
