--- a/inn.html
+++ b/inn.html
@@ -131,8 +131,19 @@
   width:100%;
   padding:10px;
   border:none;
-  border-radius:10px;
+  border-radius:1px;
   background:#1f8cff;
+  color:#fff;
+  font-weight:700;
+  margin-bottom:10px;
+  cursor:pointer;
+}
+.whatsapp-ok-btn{
+  width:100%;
+  padding:10px;
+  border:none;
+  border-radius:1px;
+  background:green;
   color:#fff;
   font-weight:700;
   margin-bottom:10px;
@@ -143,7 +154,7 @@
   width:100%;
   padding:10px;
   border:none;
-  border-radius:10px;
+  border-radius:1px;
   background:white;
   color:black;
   font-weight:700;
@@ -545,6 +556,9 @@ function renderFreeLinks() {
 <p> Don't be panic 😉 If you are not a premium users you can still copy free link's 🔗. Click one of the two options below, whelter you want to copy free links or premium link's</p>
         <button class="premium-later-btn" onclick="closePremiumModal()">Copy free link (i will buy premium later) </button>
     <button class="premium-ok-btn" onclick="goToPremium()">✅  Premium links (I'm already a premium users)</button>
+<a href="https://whatsapp.com/channel/0029VbBtb8l9xVJdvplLij3V" target="_blank">
+    <button class="whatsapp-ok-btn">✅ Join our whatsapp groups</button>
+</a>
   </div>
 </div>
 <script>
