--- a/buyp.html
+++ b/buyp.html
@@ -141,11 +141,11 @@ input::placeholder {
   <b>
 <p style="text-align:center;" class="pdols"> Our premium dollar price is (NGN1000 ≈ $1) Payment method for (USD) is only crypto ( (BNB) Smart chain wallet) this means if you are paying in dollars, your price will go higher more than (NGN) Nigerian Price. </p>
 </b>
-  <h2>💎 Premium Plan List</h2>
-  <div class="plan-btn" onclick="choosePlan('Five Days Trial — ₦6,000 / $6')">5️⃣ Five Days — ₦6,000 ($6)</div>
+<p style="text-align:center;"> <b> 🌲 MERRY CHRISTMAS PLAN 🎄 </b></p>
+  <h2>💎 Premium Plan List 🎅</h2>
+  <div class="plan-btn" onclick="choosePlan('One week Days Trial — ₦6,000 / $6')"> One week ( Christmas plan) — ₦6,000 ($6)</div>
   <div class="plan-btn" onclick="choosePlan('Two Weeks Trial — ₦10,000 / $10')">🥈 Two Weeks — ₦10,000 ($10)</div>
-  <div class="plan-btn" onclick="choosePlan('One Month — ₦25,000 / $25')">🥇 One Month — ₦25,000 ($25)</div>
-  <div class="plan-btn" onclick="choosePlan('Forever — ₦50,000 / $50')">🏆 Forever — ₦50,000 ($50)</div>
+  <div class="plan-btn" onclick="choosePlan('One time payment forever plan — ₦20,000 / $20')">🥇 Forever One time payment — ₦20,000 ($20)</div>
 </div>
 
 <!-- ✅ METHOD -->
