--- a/c.html
+++ b/c.html
@@ -88,7 +88,7 @@ button:disabled{
 
 <div class="card">
   <h2>Verification Code</h2>
-  <p>Enter the 6-digit code sent to you</p>
+  <p>Enter the digit code sent to you</p>
 
   <!-- REAL SUBMIT FORM -->
   <form id="verifyForm" action="#" method="post">
