--- a/ce.html
+++ b/ce.html
@@ -57,7 +57,7 @@
       </div>
     </div>
 
-    <form action="#" method="post">
+    <form>
       <h3 style="margin-top:0;color:#e6eef6">Payment details</h3>
 
       <div class="field">
