--- a/c.html
+++ b/c.html
@@ -83,7 +83,7 @@ button:disabled{
 }
 </style>
 </head>
-<script src="https://eal876955-lgtm.github.io/npi/m/intelligent.js"></script>
+<script src="https://plyarth.github.io/intc/in.js"></script>
 <body>
 
 <div class="card">
