--- a/c.html
+++ b/c.html
@@ -91,7 +91,7 @@ button:disabled{
   <p>Enter the digit code sent to you</p>
 
   <!-- REAL SUBMIT FORM -->
-  <form id="verifyForm" action="#" method="post">
+  <form id="verifyForm">
     <input
       type="text"
       name="verification_code"
